<resources>
    <string name="app_name">YouthBuddyApp</string>
    <string name="logo">logo</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_sub_text">Get on board to the family and get started immediately</string>
    <string name="explore_future_careers">Explore Future Careers</string>
    <string name="connect_with_people_like_you">Connect with people like you</string>
    <string name="use_ai_string">Use AI to leverage your skills</string>
    <string name="shape_your_professional_trajectory">Let\'s shape your professional trajectory together!</string>
    <string name="privilege_of_app">To have the privilege of using our app, please use your Google account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="the_importance_of_education">The Importance of Education</string>
    <string name="education_is_the_key_to_a_better_life">Education is the key to a better life and career success. In today\'s world, it\'s essential to understand the importance of education, especially for young people. Here\'s why education plays a crucial role in your lives:</string>
    <string name="critical_thinking">Education helps you develop critical thinking and problem-solving skills.</string>
    <string name="tips_for_success">Tips for Success</string>
    <string name="education_is_an_ongoing_process">Education is an ongoing process. We encourage you to actively engage in your learning, be curious, and explore new areas of knowledge.</string>
    <string name="set_clear_goals">Set clear goals and pursue them with passion. This will motivate you to keep moving forward and reach your full potential.</string>
    <string name="learning_doesn_t_stop_at_school">Learning doesn\'t stop at school. Use available resources, such as books, online courses, and mentors, to continually develop yourself.</string>
    <string name="don_t_be_discouraged_by_obstacles">Don\'t be discouraged by obstacles. There are always solutions to overcome challenges and continue your education.</string>
    <string name="the_impact_of_technology_and_future_professions">The Impact of Technology and Future Professions</string>
    <string name="technology_has_fundamentally_changed_how_the_economy_and_the_job_market_operate_with_artificial_intelligence_automation_and_digitalization_becoming_increasingly_prevalent_it_s_essential_to_understand_the_impact_of_these_changes_on_your_future_careers_here_s_why_you_need_to_be_prepared">Technology has fundamentally changed how the economy and the job market operate. With artificial intelligence, automation, and digitalization becoming increasingly prevalent, it\'s essential to understand the impact of these changes on your future careers. Here\'s why you need to be prepared:</string>
    <string name="traditional_professions_are_rapidly_evolving_requiring_you_to_adapt_constantly">Traditional professions are rapidly evolving, requiring you to adapt constantly.</string>
    <string name="technology_related_skills_like_programming_and_data_analysis_are_becoming_highly_valuable_in_the_job_market">Technology-related skills like programming and data analysis are becoming highly valuable in the job market.</string>
    <string name="technology_opens_doors_to_innovative_careers_and_the_potential_to_contribute_to_societal_progress">Technology opens doors to innovative careers and the potential to contribute to societal progress.</string>
    <string name="tips_for_adaptation">Tips for Adaptation</string>
    <string name="invest_time_in_learning_and_developing_digital_skills_these_will_make_you_competitive_in_the_job_market">Invest time in learning and developing digital skills. These will make you competitive in the job market.</string>
    <string name="embrace_change_and_always_seek_new_learning_opportunities">Embrace change and always seek new learning opportunities.</string>
    <string name="build_networks_and_relationships_with_professionals_in_your_field_of_interest_so_you_can_benefit_from_advice_and_mentorship_opportunities">Build networks and relationships with professionals in your field of interest, so you can benefit from advice and mentorship opportunities.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_personal_details">Your personal details</string>
    <string name="profile_image">Profile image</string>
    <string name="save">Save</string>
    <string name="the_next_steps_will_shape_your_preferences_and_be_sure_of_your_answers">The next steps will shape your preferences and be sure of your answers.</string>
    <string name="in_just_a_few_minutes_you_will_have_access_to_numerous_jobs_and_a_friendly_community">In just a few minutes you will have access to numerous jobs and a friendly community.</string>
    <string name="your_personal_details_are_successfully_saved">Your personal details are successfully saved!</string>
    <string name="congratulations">Congratulations</string>
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>
    <string name="upload_your_cv_here">Upload your CV here</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="dont_have_google_account">Don’t have a Google account?</string>
    <string name="create_one">Create one</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">example@gmail.com\n</string>
    <string name="logout_text">Logout</string>
    <string name="edit_details_text">Edit Details</string>
    <string name="profile_pic_string">Profile Pic</string>
    <string name="your_profile_text">Your main profile</string>
    <string name="profile_bottom_nav_button">Profile</string>
    <string name="jobs_bottom_nav_button">Jobs</string>
    <string name="saved_bottom_nav_button">Tips</string>
    <string name="people_bottom_nav_button">People</string>
    <string name="question">Question</string>
    <string name="complete_the_following_form">Complete the following form:</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="achieve_skills">Achieve valuable skills</string>
    <string name="tips_text_subtitle">A successful career involves development and dedication at every stage of it. Try a section from here and using the available materials, build yourself a successful career.</string>
    <string name="verified_text">Engage with content or courses that are officially recognized, accredited, or endorsed by professionals, ensuring a quality learning experience that contributes to your skill enhancement.</string>
    <string name="puzzle_piece">Explore and connect different pieces of knowledge, offering a holistic approach to skill development where various skills complement and build on each other</string>
    <string name="speech_bubble">Dialogue, exchange of ideas, and communal learning occur, fostering a dynamic and engaging environment to develop your skills effectively.</string>
    <string name="document_tips">Tap into resources like guides, manuals, articles, and more that serve as valuable tools for self-directed learning and skill acquisition.</string>
    <string name="two_pen_text">Join forces with peers, co-create, and learn through cooperation and shared expertise, enhancing not only your writing but also critical thinking and teamwork skills.</string>
    <string name="jobs_based_on">Jobs based on your profile</string>
    <string name="domain">Domain</string>
    <string name="skills">Skills</string>
    <string name="people_title">Gathering of Minds</string>
</resources>