<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info1Activity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/info_icon_1"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/WelcomeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/the_importance_of_education"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <TextView
        android:id="@+id/text"
        style="@style/SubTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/education_is_the_key_to_a_better_life"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/point1"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/critical_thinking"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/done_ring_round_duotone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <TextView
        android:id="@+id/point2"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/done_ring_round_duotone"
        android:drawablePadding="10dp"
        android:text="@string/connect_with_people_like_you"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point1" />

    <TextView
        android:id="@+id/point3"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/use_ai_string"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/done_ring_round_duotone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point2" />

    <TextView
        android:id="@+id/point4"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/shape_your_professional_trajectory"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/done_ring_round_duotone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point3" />

    <Button
        android:id="@+id/continue_button"
        style="@style/GreenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        android:drawablePadding="10dp"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point4" />

</androidx.constraintlayout.widget.ConstraintLayout>