<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/info_icon_4"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/WelcomeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tips_for_adaptation"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/point1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/point1"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/invest_time_in_learning_and_developing_digital_skills_these_will_make_you_competitive_in_the_job_market"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:drawableStartCompat="@drawable/done_ring_round_duotone" />

    <TextView
        android:id="@+id/point2"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/embrace_change_and_always_seek_new_learning_opportunities"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point1"
        app:drawableStartCompat="@drawable/done_ring_round_duotone" />

    <TextView
        android:id="@+id/point3"
        style="@style/InfoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:text="@string/build_networks_and_relationships_with_professionals_in_your_field_of_interest_so_you_can_benefit_from_advice_and_mentorship_opportunities"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point2"
        app:drawableStartCompat="@drawable/done_ring_round_duotone" />

    <Button
        android:id="@+id/continue_button"
        style="@style/GreenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        android:drawablePadding="10dp"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point3" />

</androidx.constraintlayout.widget.ConstraintLayout>